.xmonad/xmonad.errors

xmonad.hs:256:45: error:
    Variable not in scope: viewShift :: t0 -> WorkspaceId -> ManageHook
    |
256 |       className =? "Slack" -->  doShift <+> viewShift 3,
    |                                             ^^^^^^^^^
